@@ -25,110 +25,9 @@
  */
 require_once ('functions_html.php');
 require_once ('functions_ui.php');
+require_once('functions_io.php');
 
 define ('ENTERPRISE_NOT_HOOK', -1);
-
-/** 
- * Cleans a string by encoding to UTF-8 and replacing the HTML
- * entities. UTF-8 is necessary for foreign chars like asian 
- * and our databases are (or should be) UTF-8
- * 
- * @param mixed String or array of strings to be cleaned.
- * 
- * @return mixed The cleaned string or array.
- */
-//function safe_input ($value) {
-//	if (is_numeric ($value))
-//		return $value;
-//
-//	if (is_array ($value)) {
-//		array_walk ($value, 'safe_input');
-//		return $value;
-//	}
-//
-//	if (version_compare (PHP_VERSION, '5.2.3') === 1) {
-//		if (! mb_check_encoding ($value, 'UTF-8'))
-//			$value = utf8_encode ($value);
-//		return htmlentities ($value, ENT_QUOTES, "UTF-8", false);
-//	} else {
-//		$translation_table = get_html_translation_table (HTML_ENTITIES, ENT_QUOTES);
-//		$translation_table[chr(38)] = '&';
-//		return preg_replace ("/&(?![A-Za-z]{0,4}\w{2,3};|#[0-9]{2,3};)/", "&amp;", strtr ($value, $translation_table));
-//	}
-//}
-
-/** 
- * Cleans a string by encoding to UTF-8 and replacing the HTML
- * entities. UTF-8 is necessary for foreign chars like asian 
- * and our databases are (or should be) UTF-8
- * 
- * @param mixed String or array of strings to be cleaned.
- * 
- * @return mixed The cleaned string or array.
- */
-function safe_input($value) {
-	//Stop!! Are you sure to modify this critical code? Because the older
-	//versions are serius headache in many places of Pandora.
-	
-	if (is_numeric($value))
-		return $value;
-		
-	if (is_array($value)) {
-		array_walk($value, "safe_input");
-		return $value;
-	}
-	
-	//Clean the trash mix into string because of magic quotes.
-	if (get_magic_quotes_gpc() == 1) {
-		$value = stripslashes($value);
-	}
-	
-	if (! mb_check_encoding ($value, 'UTF-8'))
-		$value = utf8_encode ($value);
-	
-	$valueHtmlEncode =  htmlentities ($value, ENT_QUOTES, "UTF-8", true);
-		
-	//Replace the character '\' for the equivalent html entitie
-	$valueHtmlEncode = str_replace('\\', "&#92;", $valueHtmlEncode);
-	
-	return $valueHtmlEncode;
-}
-
-/** 
- * Cleans a string by encoding to UTF-8 and replacing the HTML
- * entities to their numeric counterparts (possibly double encoding)
- * 
- * @param mixed String or array of strings to be cleaned.
- * 
- * @return mixed The cleaned string or array.
- */	
-function safe_output_xml ($string) {
-	if (is_numeric ($string))
-		return $string;
-	
-	if (is_array ($string)) {
-		array_walk ($string, 'safe_output_xml');
-		return $string;
-	}
-	
-	static $table;
-	static $replace;
-	
-	if (empty ($table)) {
-		$table = get_html_translation_table (HTML_ENTITIES, ENT_QUOTES);	
-		$replace = array ();
-		
-		foreach ($table as $key => $value){
-			$table[$key] = "/".$value."/";
-			$char = htmlentities ($key, ENT_QUOTES, "UTF-8");
-			$replace[$char] = "&#".ord ($key).";";
-		}
-	}
-	
-	//now perform a replacement using preg_replace
-	//each matched value in $table will be replaced with the corresponding value in $replace
-	return preg_replace ($table, $replace, $string);
-}
 
 /**
  * Cleans an object or an array and casts all values as integers
@@ -158,28 +57,6 @@ function safe_int ($value, $min = false, $max = false) {
 		}
 	}
 	return $value;
-}
-
-/** 
- * Use to clean HTML entities when get_parameter or safe_input functions dont work
- * 
- * @param string String to be cleaned
- * 
- * @return string Cleaned string
- */
-function salida_limpia ($string) {
-	$quote_style = ENT_QUOTES;
-	static $trans;
-	if (! isset ($trans)) {
-		$trans = get_html_translation_table (HTML_ENTITIES, $quote_style);
-		foreach ($trans as $key => $value)
-			$trans[$key] = '&#'.ord($key).';';
-		// dont translate the '&' in case it is part of &xxx;
-		$trans[chr(38)] = '&';
-	}
-	// after the initial translation, _do_ map standalone "&" into "&#38;"
-	return preg_replace ("/&(?![A-Za-z]{0,4}\w{2,3};|#[0-9]{2,3};)/","&#38;",
-			strtr ($string, $trans));
 }
 
 /** 
@@ -994,17 +871,6 @@ if (!function_exists ("mb_strtoupper")) {
 	function mb_strlen ($string, $encoding = false) {
 		return strlen ($string);
 	}
-}
-
-/**
- * Avoid magic_quotes protection
- *
- * @param string Text string to be stripped of magic_quotes protection
- */
-function unsafe_string ($string) {
-	if (get_magic_quotes_gpc ()) 
-		return stripslashes ($string);
-	return $string;
 }
 
 /**
